# miniClex

./: CMakeLists.txt  README.md  atoms.txt  code.txt  firsttestfile.txt  ll.h  main.cpp  secondtestfile.txt  thirdtestfile.txt  tree.txt
headers/: lexer.h
lexer_lib/: CMakeLists.txt  lexer.cpp  lexicalGraph.cpp  lexicalGraph.h
lexer_lib/google_tests/: CMakeLists.txt  minictester.cpp
lexer_lib/include/: lexer.h
lexer_lib/src/: lexer.cpp  lexicalGraph.cpp
shunting_yard_lib/: CMakeLists.txt
shunting_yard_lib/include/: shuntingYard.h
shunting_yard_lib/src/: shuntingYard.cpp
source/: lexer.cpp  lexicalGraph.cpp
tests/: CMakeLists.txt  shunting-yard-tests.cpp
